[metadata]
name = color-analysis
description = Using multimodal LLM to perform color analysis on your uploaded portrait picture
long_description = file: READ.md
long_description_content_type = text/markdown
version = 0.1.0
author = Nathaniel Goh 
author_email = nathgoh@alumni.stanford.edu
url = http://github.com/nathgoh/color-analysis

[options]
packages = find:
python_requires = >=3.10
install_requires = 
    accelerate
    gradio
    Pillow == 10.1.0
    timm == 0.9.10
    torch == 2.1.2
    torchvision == 0.16.2
    transformers == 4.40.0
    sentencepiece == 0.1.99
    opencv-contrib-python
    python-dotenv
    ruff

[options.package_data]
* = README.md